cmake_minimum_required(VERSION 3.31)
project(tutu)

set(CMAKE_CXX_STANDARD 20)

add_executable(tutu main.cpp
        1/1.cpp
        2/2.cpp
        3/3.cpp
        4/4.cpp
        5/5.cpp
        6/1.cpp
        6/2.cpp
        6/3.cpp
        7/7.cpp
        8/8.cpp
        9/9.cpp
        9/92.cpp
        10/10.cpp
        11/11.cpp)
